--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       # Install AWS cli
       - run:
           name: Install aws cli
-          command: sudo apt-get -y -qq  --fix-missing install awscli
+          command:  sudo apt-get -y -qq install awscli
       # Set the signature version for the S3 auth
       - run:
           name: Setting Signature Version 4 for S3 Request Authentication
